# osm-pbf

./: Cargo.toml  README.md
.config/: nextest.toml
examples/: mmap_demo.rs  performance_benchmark.rs  reader_usage.rs
src/: lib.rs  prelude.rs
src/blocks/: header_block.rs  mod.rs  nano_degree.rs  prelude.rs  string_table.rs
src/blocks/primitives/: block.rs  changeset.rs  dense_info.rs  dense_nodes.rs  group.rs  info.rs  member_type.rs  mod.rs  node.rs  prelude.rs  relation.rs  way.rs
src/io/: blob.rs  indexed_reader.rs  mmap_blob.rs  mod.rs  prelude.rs  reader.rs
tests/: end_to_end_integration.rs  header_block_integration.rs  mmap_blob_integration.rs  reader_integration.rs
