[package]
name = "osm-pbf"
version = "0.1.0"
edition = "2024"
authors = ["Dimitar Isusov <lokrain@gmail.com>"]

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
# For binary data handling and streams
bytes = "1.8.0"
# For reading from various IO sources
tokio = { version = "1.41.1", features = ["io-util"], optional = true }
# For error handling
thiserror = "2.0.7"
# For parallel processing
rayon = "1.10.0"
# For memory mapping (Unix systems)
libc = { version = "0.2", optional = true }
# For benchmarking (optional)
criterion = { version = "0.7.0", features = ["html_reports"], optional = true }

[dev-dependencies]
tempfile = "3.8.1"
pretty_assertions = "1.4.1"
criterion = "0.7.0"
proptest = "1.4.0"
serde_json = "1.0"

[features]
default = ["mmap"]
async = ["tokio"]
mmap = ["libc"]
bench = ["criterion"]
